# pater.tap

./: README.md  pyproject.toml  telegrambot.py
api/: admin.py  models.py  serializers.py  urls.py  views.py
api/migrations/: 0001_initial.py
config/: settings.py  urls.py
ugc/: models.py
ugc/management/commands/: bot.py  router.py  utils.py
ugc/management/commands/routers/: __init__.py  router_language.py  router_menu.py  router_settings.py  router_start.py  states.py  utils.py
ugc/migrations/: 0004_remove_telegramuser_location_km.py  0005_rename_tg_user_lang_telegramuser_lang_and_more.py  0006_telegramuser_state_and_more.py
